fixed stupid row overflow hack with clearfix

--- a/css/thisiship.css
+++ b/css/thisiship.css
@@ -3,6 +3,3 @@ nav {
 	background-color: #e3f2fd;
 }
 */
-.event .thumbnail {
-	min-height: 275px;
-}
